[tool.poetry]
name = "dsportfolio"
version = "0.1.0"
description = ""
authors = ["William Wang <willwan@ucla.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.22.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
